--- a/My_Notes/Staps_Thesis_Notes.html
+++ b/My_Notes/Staps_Thesis_Notes.html
@@ -127,7 +127,7 @@
 <h3 id="radial-electric-field">2.6 Radial electric field</h3>
 <h4 id="partial-differential-equation">2.6.1 Partial differential equation</h4>
 <ul>
-<li><p>Amp`{e}re's law: <span class="math display">\[\nabla \times \mathbf{B} \,=\, \mu_0 \mathbf{J} + \mu_0 \epsilon_0 \frac{\partial \mathbf{E}}{\partial t}\]</span></p>
+<li><p>Ampère's law: <span class="math display">\[\nabla \times \mathbf{B} \,=\, \mu_0 \mathbf{J} + \mu_0 \epsilon_0 \frac{\partial \mathbf{E}}{\partial t}\]</span></p>
 <ul>
 <li><p>The divergence in the radial direction is zero, meaning the plasma and displacement current must vanish. This means we obtain an equation for the radial electric field and radial current: <span class="math display">\[\epsilon_0 \frac{\partial E_r}{\partial t} \,=\, -J_r \,=\, \sum_k \left(q_{e,i} \Gamma_{e,i}^k\right)\]</span></p>
 <ul>
